# toroidal-self-eval

./: README.md
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
database/: docker-compose.yml
database/qdrant_data/: raft_state.json
